--- a/views/login/login.html
+++ b/views/login/login.html
@@ -169,6 +169,13 @@
 	<script>
 		$(function () {
 
+            if(top.location!=self.location){
+                console.log(("exit"));
+                window.parent.location.href = "/login";
+            }else{
+                console.log(("no exit"));
+            }
+
 			//获取本地存储信息
 			var account = getCookieValue("account");
 			var password = getCookieValue("password");
