--- a/views/main/index.html
+++ b/views/main/index.html
@@ -123,8 +123,8 @@
 			</div>
 			<div class="container-fluid">
 				<div class="navbar-btn" style="line-height: 80px;padding: 0px 0px;margin-top: 0px">
-					{{/*<button type="button" class="btn-toggle-fullwidth"><i class="lnr lnr-arrow-left-circle"></i></button>*/}}
-						<button type="button" class="btn-toggle-fullwidth"><img id="menu" width="30" src="../../static/img/close.png"></button>
+					<button type="button" class="btn-toggle-fullwidth"><i class="lnr lnr-arrow-left-circle"></i></button>
+						{{/*<button type="button" class="btn-toggle-fullwidth"><img id="menu" width="30" src="../../static/img/close.png"></button>*/}}
 				</div>
 				{{/*===<form class="navbar-form navbar-left">
 					<div class="input-group">
