--- a/views/main/uploadPic.html
+++ b/views/main/uploadPic.html
@@ -25,7 +25,7 @@
             itemWidth        :   "140px",                 // 文件项的宽度
             itemHeight       :   "115px",                 // 文件项的高度
             url              :   "/main/upload4pic/",  // 上传文件的路径
-            fileType         :   ["jpg","png"],// 上传文件的类型
+            fileType         :   ["jpg","jpeg","png"],// 上传文件的类型
             fileSize         :   102400,                // 上传文件的大小
             multiple         :   false,                    // 是否可以多个文件上传
             dragDrop         :   true,                    // 是否可以拖动上传文件
